--- a/config.json
+++ b/config.json
@@ -2,17 +2,17 @@
     "token": "",
     "language": "en",
     "prefix": "!",
-    "mongodbUri": "",
+    "mongodbUri": "mongodb+srv://tcaothien24:<db_password>@tranlaluotttt.obwxx.mongodb.net/?retryWrites=true&w=majority&appName=tranlaluotttt ",
     "geniusToken": "0CHr9jtPjR7EKraXUVv6__8ELmEwFeUwt5vYAhk-is_fGOq-10-epdMzESkMPUnf",
     "excessCommands": {
         "utility": true,
         "other": true,
-        "hentai": false,
+        "hentai": true,
         "lavalink": false,
         "troll": true
     },
     "categories": {
-        "anime": false,
+        "anime": true,
         "basic": true,
         "utility": true,
         "moderation": true,
@@ -25,7 +25,7 @@
             "host": "37.114.42.191",
             "port": 6767,
             "password": "danteisnttaken",
-            "secure": false
+            "secure": true
         }
     },
     "spotifyClientId": "f71a3da30e254962965ca2a89d6f74b9",
