--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
     "token": "",
     "language": "en",
-    "prefix": "!",
+    "prefix": "e",
     "mongodbUri": "mongodb+srv://tcaothien24:<db_password>@tranlaluotttt.obwxx.mongodb.net/?retryWrites=true&w=majority&appName=tranlaluotttt ",
     "geniusToken": "0CHr9jtPjR7EKraXUVv6__8ELmEwFeUwt5vYAhk-is_fGOq-10-epdMzESkMPUnf",
     "excessCommands": {
         "utility": true,
         "other": true,
-        "hentai": true,
+        "hentai": false,
         "lavalink": false,
         "troll": true
     },
@@ -17,7 +17,7 @@
         "utility": true,
         "moderation": true,
         "fun": true,
-        "distube music": true,
+        "distube music": false,
         "setups": true
     },
     "lavalink": {
@@ -25,7 +25,7 @@
             "host": "37.114.42.191",
             "port": 6767,
             "password": "danteisnttaken",
-            "secure": true
+            "secure": false
         }
     },
     "spotifyClientId": "f71a3da30e254962965ca2a89d6f74b9",
