--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "token": "",
     "language": "en",
     "prefix": "e",
-    "mongodbUri": "mongodb+srv://tcaothien24:010101@Tct@tranlaluotttt.obwxx.mongodb.net/?retryWrites=true&w=majority&appName=tranlaluotttt",
+    "mongodbUri": "mongodb+srv://tcaothien24:010101@Tct@enzlewy.obwxx.mongodb.net/?retryWrites=true&w=majority&appName=enzlewy",
     "geniusToken": "0CHr9jtPjR7EKraXUVv6__8ELmEwFeUwt5vYAhk-is_fGOq-10-epdMzESkMPUnf",
     "excessCommands": {
         "utility": true,
