--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
             "host": "37.114.42.191",
             "port": 6767,
             "password": "danteisnttaken",
-            "secure": true
+            "secure": false
         }
     },
     "spotifyClientId": "f71a3da30e254962965ca2a89d6f74b9",
